--- a/style.css
+++ b/style.css
@@ -4,3 +4,7 @@
   /* Unfloat the back to top link in footer */
   .footer {
     margin-left: -20px;
+Animate.css - http://daneden.me/animate
+Licensed under the MIT license - http://opensource.org/licenses/MIT
+
+Copyright (c) 2014 Daniel Eden
